--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.9.0",
     "jest-expo": "23.0.0",
+    "react-native-scripts": "1.9.0",
     "react-test-renderer": "16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -27,7 +27,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-communications": "^2.2.1",
-    "react-native-router-flux": "^3.35.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
